Added description to about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by Umair Baig as part of his dedication to self-growth and rockstar coding expertise. It uses data form mapbox.com and darksky.net to display weather data for a particular location based on user input. This app was built with NodeJs, Express, and a variety of other node packages, and launched with Heroku.</p>
         <img class="portrait" src="/images/robot.png" alt="">
     </div>
     {{>footer}}
